truffle: use private key in env instead of keystore

--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
   },
   "dependencies": {
     "app-root-path": "~2.1.0",
+    "dotenv": "^8.2.0",
     "frg-ethereum-runners": "https://github.com/ampleforth/frg-ethereum-runners.git#v1.0.1",
     "openzeppelin-solidity": "2.4.0",
     "uFragments": "https://github.com/ampleforth/uFragments.git#v1.0.0"
   },
   "devDependencies": {
-    "ethereumjs-wallet": "0.6.2",
     "@openzeppelin/cli": "^2.6.0",
     "truffle": "5.0.13",
     "truffle-hdwallet-provider": "^1.0.17",
